sass config added + autoprefixer mixins removed

--- a/src/abstracts/mixins/_mixins_base.scss
+++ b/src/abstracts/mixins/_mixins_base.scss
@@ -23,7 +23,7 @@
 	}
 
 	.flex#{$breakpoint} {
-		@include ap_display-flex()
+		display: flex;
 	}
 
 	.floats-box#{$breakpoint}::after, .floats-box#{$breakpoint}::before {
