--- a/src/abstracts/mixins/_mixins_grid.scss
+++ b/src/abstracts/mixins/_mixins_grid.scss
@@ -2,25 +2,23 @@
 
 @mixin generateGrid($breakpoint : null) {
 
-	.grid, .direction-row, .direction-row#{$breakpoint} {
-		@include ap_flex-direction(row);
+	.grid, .direction-row#{$breakpoint} {
+		flex-direction: row;
 	}
 
 	.grid-reverse#{$breakpoint},
-	.direction-row-reverse#{$breakpoint},
 	.direction-row-reverse#{$breakpoint} {
-		@include ap_flex-direction(row-reverse);
+		flex-direction: row-reverse;
 	}
 
 	.grid-column#{$breakpoint},
-	.direction-column#{$breakpoint},
 	.direction-column#{$breakpoint} {
-		@include ap_flex-direction(column);
+		flex-direction: column;
 	}
 
 	.grid-column-reverse#{$breakpoint},
-	.direction-column-reverse#{$breakpoint},
 	.direction-column-reverse#{$breakpoint} {
-		@include ap_flex-direction(column-reverse);
+		flex-direction: column-reverse;
 	}
+
 }
