--- a/src/layout/_2_flexbox_grid_media.scss
+++ b/src/layout/_2_flexbox_grid_media.scss
@@ -7,7 +7,7 @@
 
 	@include respond-to($breakpoint) {
 
-		@include generateGrid($breakpointSuffix);
+		@include generateFlexDirection($breakpointSuffix);
 
 		/* CELLS */
 
