--- a/src/layout/_grid.scss
+++ b/src/layout/_grid.scss
@@ -1,16 +1,11 @@
-/* #########################  start : Grid  ######################### */
+/* ------------------------  Grid  ------------------------ */
 
 [class*="grid"] {
 	display: flex;
 	flex-wrap: wrap;
-	flex-direction: row;
 }
 
-@include generateGrid();
-
-/* #########################  end : GRID  ######################### */
-
-/* #########################  start : CELLS  ######################### */
+/* ------------------------  Cells  ------------------------ */
 
 [class*="cell-"] {
 	flex-grow: 0;
@@ -29,40 +24,30 @@
 
 @include generateCellOffset();
 
-/* #########################  end : CELLS  ######################### */
+/* ------------------------  direction  ------------------------ */
 
-/* #########################  start : FLEX WRAP  ######################### */
+@include generateFlexDirection();
+
+/* ------------------------  wrap  ------------------------ */
 
 @include generateFlexWrap();
 
-/* #########################  end : FLEX WRAP  ######################### */
-
-/* #########################  start : FLEX HORIZONTAL  ######################### */
+/* ------------------------  justify content  ------------------------ */
 
 @include generateJustifyContent();
 
-/* #########################  end : FLEX HORIZONTAL  ######################### */
-
-/* #########################  start : FLEX VERTICAL  ######################### */
+/* ------------------------  align items  ------------------------ */
 
 @include generateAlignItems();
 
-/* #########################  end : FLEX VERTICAL  ######################### */
-
-/* #########################  start : FLEX ALIGN CONTENT  ######################### */
+/* ------------------------  align content  ------------------------ */
 
 @include generateAlignContent();
 
-/* #########################  end : FLEX ALIGN CONTENT  ######################### */
-
-/* #########################  start : FLEX SELF ALIGN VERTICAL  ######################### */
+/* ------------------------  align vertical  ------------------------ */
 
 @include generateAlignSelf();
 
-/* #########################  end : FLEX SELF ALIGN VERTICAL  ######################### */
-
-/* #########################  start : FLEX ORDER  ######################### */
+/* ------------------------  order  ------------------------ */
 
 @include generateFlexOrder();
-
-/* #########################  end : FLEX ORDER  ######################### */
