--- a/src/abstracts/mixins/_mixins_cells.scss
+++ b/src/abstracts/mixins/_mixins_cells.scss
@@ -2,9 +2,11 @@
 
 @mixin generateCellRest($breakpoint : null) {
 
-	.cell-rest#{$breakpoint} {
-		flex: 1;
-		margin: $DEFAULT_CELLS_MARGIN;
+	@each $cell_gutter in $cell_gutters {
+		.cell-rest#{$breakpoint} {
+			flex: 1;
+			margin: $cell_gutter;
+		}
 	}
 
 	.cell-rest-no-gutters#{$breakpoint} {
@@ -17,13 +19,15 @@
 
 @mixin generateCells($breakpoint : null) {
 
-	@for $iteratorValue from 1 through $NB_CELLS {
+	@for $iteratorValue from 1 through $number_of_cells {
 
-		.cell-#{getCellSize($iteratorValue)}#{$breakpoint} {
+		@each $cell_gutter in $cell_gutters {
+			.cell-#{getCellSize($iteratorValue)}#{$breakpoint} {
 
-			flex-basis: getGuttersCellWidth($iteratorValue);
-			margin: $DEFAULT_CELLS_MARGIN;
-			max-width: getGuttersCellWidth($iteratorValue);
+				flex-basis: getGuttersCellWidth($iteratorValue, $cell_gutter);
+				margin: $cell_gutter;
+				max-width: getGuttersCellWidth($iteratorValue, $cell_gutter);
+			}
 		}
 
 		.cell-#{getCellSize($iteratorValue)}-no-gutters#{$breakpoint} {
@@ -42,9 +46,7 @@
 
 	.grid-column#{$breakpoint} > [class*="cell-"],
 	.direction-column#{$breakpoint} > [class*="cell-"],
-	.direction-column#{$breakpoint} > [class*="cell-"],
 	.grid-column-reverse#{$breakpoint} > [class*="cell-"],
-	.direction-column-reverse#{$breakpoint} > [class*="cell-"],
 	.direction-column-reverse#{$breakpoint} > [class*="cell-"] {
 		flex-basis: auto;
 		max-width: initial;
@@ -57,7 +59,7 @@
 @mixin generateCellPushAndPull($breakpoint : null) {
 
 	/* :::: push :::: */
-	@for $iteratorValue from 1 through ($NB_CELLS + 1) {
+	@for $iteratorValue from 1 through ($number_of_cells + 1) {
 
 		[class*="cell-"].push-#{getCellSize($iteratorValue)}#{$breakpoint} {
 			left: getNoGuttersCellWidth($iteratorValue);
@@ -66,7 +68,7 @@
 	}
 
 	/* :::: pull :::: */
-	@for $iteratorValue from 1 through ($NB_CELLS + 1) {
+	@for $iteratorValue from 1 through ($number_of_cells + 1) {
 
 		[class*="cell-"].pull-#{getCellSize($iteratorValue)}#{$breakpoint} {
 			right: getNoGuttersCellWidth($iteratorValue);
@@ -79,17 +81,19 @@
 
 @mixin generateCellOffset($breakpoint : null) {
 
-	@for $iteratorValue from 1 through ($NB_CELLS + 1) {
+	@for $iteratorValue from 1 through ($number_of_cells + 1) {
 
-		[class*="cell-"].offset-#{getCellSize($iteratorValue)}#{$breakpoint} {
-			margin-left: calc(#{getNoGuttersCellWidth($iteratorValue)} + #{$DEFAULT_CELLS_MARGIN});
+		@each $cell_gutter in $cell_gutters {
+			[class*="cell-"].offset-#{getCellSize($iteratorValue)}#{$breakpoint} {
+				margin-left: calc(#{getNoGuttersCellWidth($iteratorValue)} + #{$cell_gutter});
+			}
 		}
 
 	}
 
 	/* offset no gutters */
 
-	@for $iteratorValue from 1 through ($NB_CELLS + 1) {
+	@for $iteratorValue from 1 through ($number_of_cells + 1) {
 
 		[class*="cell-"].offset-#{getCellSize($iteratorValue)}-no-gutters#{$breakpoint} {
 			margin-left: #{getNoGuttersCellWidth($iteratorValue)}
