--- a/src/abstracts/variables/_variables_config.scss
+++ b/src/abstracts/variables/_variables_config.scss
@@ -1,6 +1,6 @@
 // todo : add !default as default_cells_margin example
 
-// font variables
+// ::::: FONTS :::::
 $text_font: "Open Sans", "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $text_font_size: 14px;
 $text_font_color: #404852;
@@ -8,43 +8,10 @@ $title_primary_font: "Open Sans", "Clear Sans", "Helvetica Neue", Helvetica, Ari
 $title_secondary_font: "Segoe Ui, sans-serif";
 $code_font: "SF Mono", "Segoe UI Mono", "Roboto Mono", Menlo, Courier, monospace;
 
-// cells margin
-$DEFAULT_CELLS_MARGIN: 15px !default;
+// ::::: CELLS :::::
 
-$NB_CELLS: 12;
-
-/* Define containers name and containers 'max-width' value */
-$CONTAINERS: (
-	'giant': 2000px,
-	'great': 1850px,
-	'big': 1850px,
-	'medium': 1350px,
-	'': 1150px,
-	'small':850px,
-	'tiny':650px
-);
-
-// cells gutters
-// todo : maybe reanme that variable ... ?
-$GUTTERS_VALUES: (
-	50,
-	30,
-	15,
-	10,
-	5,
-	0
-);
-
-// todo : look what is the difference between it and gutters values ?
-/* list values */
-$LST_VALUES: (
-	0,
-	50,
-	30,
-	15,
-	10,
-	5
-);
+$number_of_cells: 12;
+$cell_gutters: (15px, 30px);
 
 /* responsive breakpoints */
 // todo : test if min + max working
