no-gutters diffuser done

--- a/src/abstracts/functions/_functions_cells.scss
+++ b/src/abstracts/functions/_functions_cells.scss
@@ -17,3 +17,7 @@
 @function getGuttersCellWidth($iteratorValue, $gutterValue) {
 	@return calc(#{getNoGuttersCellWidth($iteratorValue)} - #{getSumOfCellSidesMargin($gutterValue)});
 }
+
+@function getOneSideGutterCellWidth($iteratorValue, $gutterValue) {
+	@return calc(#{getNoGuttersCellWidth($iteratorValue)} - #{$gutterValue});
+}
