--- a/src/magic-monkey.min.scss
+++ b/src/magic-monkey.min.scss
@@ -6,8 +6,8 @@
 // ------------------------  3. Base stuff  ------------------------
 @import "base/magic_normalizer";
 // ------------------------  4. Layout-related sections  ------------------------
-/*@import 'layout/2_flexbox_grid_media';*/
 @import 'layout/grid';
+@import 'layout/2_flexbox_grid_media';
 // ------------------------  5. Components  ------------------------
 // ------------------------  6. Page-specific styles  ------------------------
 // ------------------------  7. Themes  ------------------------
