position, margin, padding added

--- a/src/abstracts/_mixins.scss
+++ b/src/abstracts/_mixins.scss
@@ -1,3 +1,6 @@
 @import 'mixins/mixins_breakpoints';
 @import 'mixins/mixins_cells';
 @import 'mixins/mixins_grid';
+@import 'mixins/mixins_margin';
+@import 'mixins/mixins_padding';
+@import 'mixins/mixins_position';
